--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0% 3% 0% 3%;
 }
+
 html {
     height: 100%;
     margin: 0;
@@ -28,7 +29,7 @@ body {
     justify-content: space-between;
 }
 
-p{
+p {
     max-width: 500px;
 }
 
@@ -66,7 +67,7 @@ nav {
     cursor: pointer;
 }
 
-a {
+#menu {
     text-decoration: none;
     color: honeydew;
     display: flex;
@@ -91,13 +92,16 @@ a {
 
 .elementoSkillsV {
     width: 50px;
+    padding-bottom: 10px;
 }
 
 .elementoSkillsH {
     width: 80px;
+    padding-bottom: 10px;
 }
 
-.elementoSkillsV:hover, .elementoSkillsH:hover {
+.elementoSkillsV:hover,
+.elementoSkillsH:hover {
     opacity: 0.5;
 }
 
@@ -154,7 +158,7 @@ input[type="submit"] {
 }
 
 .elementoSocial {
-    width: 40px;
+    height: 40px;
     padding: 0px 10px 0px 10px;
 }
 
@@ -165,6 +169,13 @@ input[type="submit"] {
 footer {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 3%;
+    margin-top: 10px;
+    height: 50px;
+    align-items: flex-end;
+}
+
+#edu {
+    text-decoration: none;
+    color: black;
+    margin: 0;
 }
