agregué contenido a 'Sobre Mi' y modifiqué el Inicio

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
 
 p {
     max-width: 500px;
+    font-size: 16px;
 }
 
 header {
@@ -74,15 +75,6 @@ div.menu {
     margin: 0;
 }
 
-.fotoCV {
-    width: 150px;
-    float: right;
-    margin-top: 45px;
-    margin-right: 60px;
-    border-radius: 100px;
-    border: 2px solid rgb(56, 187, 106);
-}
-
 .skills {
     display: flex;
     align-items: center;
@@ -107,13 +99,41 @@ div.menu {
 
 #box1,
 #box2 {
-    /*border: 1px solid black;*/
     margin: 0 0 5px 0;
 }
 
-#box1 {
-    padding-right: 15px;
+#box1Inicio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
 }
+
+#box2Inicio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inicio {
+    display: flex;
+    align-items: center;
+}
+
+.elementoInicio {
+    height: 25px;
+    padding: 5px 5px 0px 0;
+    margin-bottom: 5px;
+}
+
+.fotoCV {
+    width: 150px;
+    height: 150px;
+    border-radius: 100px;
+    border: 2px solid rgb(56, 187, 106);
+    margin-right: 20px;
+}
+
 
 input,
 textarea {
