datos ingresados en Contacto se cargan a objeto

--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,8 @@ div.menu {
     img.elementoInicio {
         height: 20px;
         padding: 0;
-        margin-bottom: 5px;*/
+        margin-bottom: 5px;
     }
-        
 }
 .skills {
     display: flex;
