--- a/css/style.css
+++ b/css/style.css
@@ -254,10 +254,11 @@ footer {
     }
 
     h1 {
-        display: flex;
+        /*display: flex;
         margin-left: 10%;
         font-size: 30px;
-        margin: 0;
+        margin: 0;*/
+        display: none;
     }
 
     nav {
